language/move-lang/tests/move_check/naming/named_address_distinct_from_each_other.exp
error[E03002]: unbound module
   ┌─ tests/move_check/naming/named_address_distinct_from_each_other.move:11:9
   │
11 │     use B::M;
   │         ^^^^ Invalid 'use'. Unbound module: 'B::M'

error[E02011]: invalid 'friend' declaration
   ┌─ tests/move_check/naming/named_address_distinct_from_each_other.move:12:5
   │
12 │     friend B::M;
   │     ^^^^^^^^^^^^
   │     │      │
   │     │      Cannot declare modules out of the current address as a friend
   │     Invalid friend declaration

error[E03002]: unbound module
   ┌─ tests/move_check/naming/named_address_distinct_from_each_other.move:13:22
   │
13 │     public fun ex(): B::M::S {
   │                      ^^^^ Unbound module 'B::M'

error[E03002]: unbound module
   ┌─ tests/move_check/naming/named_address_distinct_from_each_other.move:14:9
   │
14 │         B::M::C;
   │         ^^^^ Unbound module 'B::M'

error[E03002]: unbound module
   ┌─ tests/move_check/naming/named_address_distinct_from_each_other.move:15:9
   │
15 │         B::M::s()
   │         ^^^^ Unbound module 'B::M'

